# global-indicators

./: .env  .flake8  .ghsci_ee_version  .gitattributes  .gitignore  .isort.cfg  .pre-commit-config.yaml  .test-compose.yml  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  cycling-comparison.bat  docker-bash.sh  docker-compose-cycling-comparison.yml  docker-compose-ee.yml  docker-compose-jupyter.yml  docker-compose.yml  docker-jupyter.sh  global-indicators-ee.bat  global-indicators-ee.sh  global-indicators.bat  global-indicators.sh  help.txt  init_db.bat  init_db.sh  jupyter_notebook_config.py  pyproject.toml  readme.md  unzip_data.py  win-docker-bash.bat  win_docker_bash.bat
.github/: docker-compose.yml  entrypoint.sh
analysis/: Proposed_indicators.md  Proposed_inicators.md  analysis-between-cities.ipynb  analysis-within-city-boxplots.ipynb  analysis-within-city-casestudies.ipynb  analysis-within-city-maps.ipynb  cities_continents.csv  gtfs count.ipynb  output_indicators_analysis.ipynb  percent of population with above median walkability.ipynb  readme.md  threshold_mapping.ipynb
data/: readme.md
data-Indicator/: README.md
docker/: Dockerfile  Dockerfile-ee  docker-build-ee.bat  docker-build-ee.sh  docker-build.bat  docker-build.sh  environment-ee.yml  environment.yml  pyproject.toml  readme.md  requirements-ee.txt  requirements.txt
docker/osmnx/: Dockerfile  environment.yml  readme.md  requirements.txt
docs/: 1.-Policy-Indicators.md  2.-Spatial-indicators-and-reporting-software.md  3.-Running-the-Software.md  4.-Analysis-&-Generate-Resources.md  5.-Detailed-Setup.md  6.-Data.md  7.-Advanced-Features.md  8.-Useful-Links-and-Resources.md  9.-Frequently-Asked-Questions-(FAQ).md  Indicators.md  _config.yml  index.md
documentation/: README.md  _config.yml  ghscic_process.md  readme.md  workflow.md
maps/: README.md  global walkability case studies - 2021-06-21.qgz
note/: pandana.txt
output_data/: readme.md
process/: ._config.py  ._phoenix.ipynb  .gitignore  .yamllint  00_create_database.py  00_create_project_configuration_files.py  01_create_study_region.py  01_create_studyregion.ipynb  01_study_region_setup.py  02_create_osm_resources.ipynb  02_create_population.py  02_neighbourhood_analysis.py  03_aggregation.py  03_create_builtup_urban_GHSL.ipynb  03_create_pedestrian_network.py  03_create_sample_points.ipynb  04_create_meshblock_dwellings.py  04_create_sample_points.ipynb  04_create_sausage_buffer.ipynb  04_generate_reports.py  04a_create_sausage_buffer.ipynb  05_create_population_GHSL.ipynb  05_parcel_dwellings_setup.py  05_setup_admin_level_population.ipynb  06_count_parcels_in_hexes.py  (+138 more)
process-indicator/: README.md
(+423 files in other folders)
