[project]
name = "ghsci"
version = "5.0.0"
description = "Global Health and Sustainable Cities Indicators project environment"
requires-python = ">=3.11"
dependencies = [
    "arabic-reshaper>=3.0,<3.1",
    "babel>=2.17,<2.18",
    "cartopy>=0.24,<0.25",
    "contextily>=1.6,<1.7",
    "fonttools>=4.55,<4.56",
    "fpdf2>=2.8,<2.9",
    "geoalchemy2>=0.17,<0.18",
    "gtfs-lite>=0.2,<0.3",
    "h11>=0.16.0",
    "ipywidgets>=8.1,<8.2",
    "jupyterlab>=4.4,<4.5",
    "nicegui>=2.20,<2.21",
    "openpyxl>=3.1,<3.2",
    "osmnx>=2.0,<2.1",
    "pandana>=0.7,<0.8",
    "pandas>=2.1,<2.2",
    "psycopg2-binary>=2.9,<2.10",
    "pygeometa>=0.16,<0.17",
    "python-bidi>=0.6,<0.7",
    "pyyaml>=6.0,<6.1",
    "quackosm>=0.15,<0.16",
    "rasterio>=1.4,<1.5",
    "requests>=2.32.4",
    "setuptools>=78.1.1",
    "sqlalchemy>=1.4,<1.5",
    "starlette>=0.40.0",
    "tornado>=6.5.0",
    "tqdm>=4.66,<4.67",
    "uharfbuzz>=0.50,<0.51",
    "urllib3>=2.2.3",
    "yamllint>=1.37,<1.38"
]

[tool.black]
line-length = 79
skip-string-normalization=true
include = '.pyi?$'
exclude = '''
/(
    .git
    | .hg
    | .mypy_cache
    | .tox
    | .venv
    | _build
    | buck-out
    | build
    | dist
)/
'''

[tool.docformatter]
recursive = true
wrap-summaries = 79
wrap-descriptions = 79
blank = true
